force-app/main/default/objects/Lead_Staging__b/Lead_Staging__b.object-meta.xml
<CustomObject>
    <label>Lead Staging</label>
    <pluralLabel>Lead Stagings</pluralLabel>
</CustomObject>