force-app/main/default/objects/Lead_Staging__b/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>