force-app/main/default/objects/Lead_Staging__b/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Index</label>
    <length>50</length>
    <type>Text</type>
</CustomField>