force-app/main/default/objects/Lead_Staging__b/fields/Lead_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Referrer__c</fullName>
    <label>Lead_Referrer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>