force-app/main/default/objects/Lead_Staging__b/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead_Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>