force-app/main/default/objects/Lead_Staging__b/fields/Month_Key1__c.field-meta.xml
<CustomField>
    <fullName>Month_Key1__c</fullName>
    <label>Month_Key</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>