force-app/main/default/objects/Lead_Staging__b/fields/Month_Key__c.field-meta.xml
<CustomField>
    <fullName>Month_Key__c</fullName>
    <label>Month_Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>