force-app/main/default/objects/Lead_Staging__b/fields/Processing_Status1__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status1__c</fullName>
    <label>Processing Status</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>