force-app/main/default/objects/Lead_Staging__b/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <label>Processing_Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>