force-app/main/default/objects/Lead_Staging__b/fields/SourceSystemId1__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemId1__c</fullName>
    <label>SourceSystemId</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>