force-app/main/default/objects/Lead_Staging__b/fields/SourceSystemId__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemId__c</fullName>
    <label>SourceSystemId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>