force-app/main/default/objects/Lead_Staging__b/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Website</label>
    <length>80</length>
    <type>Text</type>
</CustomField>